--- a/app/src/main/res/layout/fr_result_detail.xml
+++ b/app/src/main/res/layout/fr_result_detail.xml
@@ -44,6 +44,25 @@
             android:paddingStart="4dp"
             tools:text="2412 м." />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/speedLabel" />
+
+        <TextView
+            android:id="@+id/tvSpeed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="0dp"
+            android:paddingStart="4dp"
+            tools:text="2412 м." />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/ivScreenshot"
