--- a/app/src/main/res/xml/tr_pref.xml
+++ b/app/src/main/res/xml/tr_pref.xml
@@ -27,4 +27,33 @@
         android:lines="1"
         android:title="@string/dialog_title_user_weight" />
 
+    //sex
+    <ListPreference
+        android:defaultValue="1"
+        android:dialogTitle="Выберите Ваш пол"
+        android:entries="@array/entries_list_preference_sex"
+        android:entryValues="@array/entryvalues_list_preference_sex"
+        android:key="@string/pref_key_sex"
+        android:title="@string/title_auto_sex" />
+
+    //height
+    <EditTextPreference
+        android:defaultValue="@string/pref_default_value_height"
+        android:dialogTitle="@string/dialog_title_user_height"
+        android:digits="0123456789"
+        android:inputType="numberDecimal"
+        android:key="@string/pref_key_height"
+        android:lines="1"
+        android:title="@string/dialog_title_user_height" />
+
+    //years
+    <EditTextPreference
+        android:defaultValue="@string/pref_default_value_years"
+        android:dialogTitle="@string/dialog_title_user_years"
+        android:digits="0123456789"
+        android:inputType="numberDecimal"
+        android:key="@string/pref_key_years"
+        android:lines="1"
+        android:title="@string/dialog_title_user_years" />
+
 </PreferenceScreen>
