--- a/app/src/main/res/layout/fr_results.xml
+++ b/app/src/main/res/layout/fr_results.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recycler"
-    android:name="com.elegion.tracktor.results.ResultsFragment"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.results.ResultsFragment"
-    tools:listitem="@layout/li_track" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+    <android.support.v7.widget.RecyclerView
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/recycler"
+        android:name="com.elegion.tracktor.results.ResultsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.results.ResultsFragment"
+        tools:listitem="@layout/li_track"
+        />
+    <TextView
+        android:id="@+id/tv_empty_list"
+        android:text="@string/empty_list"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        />
+
+</LinearLayout>
+
+
