--- a/app/src/main/res/layout/fr_results.xml
+++ b/app/src/main/res/layout/fr_results.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
+
     <android.support.v7.widget.RecyclerView
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/recycler"
@@ -10,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.results.ResultsFragment"
-        tools:listitem="@layout/li_track"
+        tools:listitem="@layout/li_track_con"
         />
     <TextView
         android:id="@+id/tv_empty_list"
