--- a/app/src/main/res/menu/menu_sort.xml
+++ b/app/src/main/res/menu/menu_sort.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/actionDirection"
         android:title="dir"
-        android:icon="@drawable/ic_comment"
+        android:icon="@mipmap/ic_launcher_round"
         app:showAsAction="ifRoom" />
 
     <item
