Track color and width was implemented

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -20,13 +20,25 @@
         <item>50%%</item>
         <item>25%%</item>
     </string-array>
-
     <string-array name="entryvalues_list_preference_compress">
         <item>100</item>
         <item>75</item>
         <item>50</item>
         <item>25</item>
     </string-array>
+    <string-array name="entries_list_preference_track_color">
+        <item>Черный</item>
+        <item>Красный</item>
+        <item>Зеленый</item>
+        <item>Синий</item>
+    </string-array>
+    <string-array name="entryvalues_list_preference_track_color">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
 
     <string-array name="entries_list_preference_shutdown">
         <item>Никогда</item>
