--- a/app/src/main/res/xml/tr_pref.xml
+++ b/app/src/main/res/xml/tr_pref.xml
@@ -2,6 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/title_activity_preference">
 
+
     <ListPreference
         android:defaultValue="1"
         android:dialogTitle="@string/dialog_title_distance_unit"
@@ -16,6 +17,21 @@
         android:entryValues="@array/entryvalues_list_preference_compress"
         android:key="@string/pref_key_compress"
         android:title="@string/title_distance_compress" />
+    <ListPreference
+        android:defaultValue="1"
+        android:dialogTitle="@string/dialog_title_track_color"
+        android:entries="@array/entries_list_preference_track_color"
+        android:entryValues="@array/entryvalues_list_preference_track_color"
+        android:key="@string/pref_key_track_color"
+        android:title="@string/title_distance_track_color" />
+    <EditTextPreference
+        android:defaultValue="@string/pref_default_value_track_width"
+        android:dialogTitle="@string/dialog_title_track_width"
+        android:digits="0123456789"
+        android:inputType="numberDecimal"
+        android:key="@string/pref_key_track_width"
+        android:lines="1"
+        android:title="@string/dialog_title_track_width" />
 
     <ListPreference
         android:defaultValue="@string/pref_default_value_shutdown"
