--- a/app/src/main/res/layout/li_track_con.xml
+++ b/app/src/main/res/layout/li_track_con.xml
@@ -112,7 +112,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Редактировать"
+            android:text="Подробнее"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
