--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -50,14 +50,14 @@
 
     <string-array name="entries_list_preference_shutdown">
         <item>Никогда</item>
-        <item>10 минут</item>
+        <item>10 секунд</item>
         <item>30 минут</item>
         <item>60 минут</item>
     </string-array>
 
     <string-array name="entryvalues_list_preference_shutdown">
         <item>  -1</item>
-        <item> 600</item>
+        <item> 10</item>
         <item>1800</item>
         <item>3600</item>
     </string-array>
